// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeployProgressBar component should render the expected snapshot when showing v1 deploy view 1`] = `
<div
  className="bx--col-lg-10"
>
  <ul
    className="bx--progress"
  >
    <li
      className="bx--progress-step bx--progress-step--current"
    >
      <button
        className="bx--progress-step-button bx--progress-step-button--unclickable"
        onKeyDown={[Function]}
        tabIndex={-1}
      >
        <span
          className="bx--assistive-text"
        >
          Current
        </span>
        <svg
          aria-hidden={true}
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="16"
            cy="16"
            r="10"
          />
          <path
            d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
          />
          <title>
            
          </title>
        </svg>
        <p
          className="bx--progress-label"
        >
          Step 1
        </p>
        <p
          className="bx--progress-optional"
        >
          Choose smart contract
        </p>
        <span
          className="bx--progress-line"
        />
      </button>
    </li>
    <li
      className="bx--progress-step bx--progress-step--incomplete"
    >
      <button
        className="bx--progress-step-button bx--progress-step-button--unclickable"
        onKeyDown={[Function]}
        tabIndex={-1}
      >
        <span
          className="bx--assistive-text"
        >
          Incomplete
        </span>
        <svg
          aria-hidden={true}
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
          />
          <title>
            
          </title>
        </svg>
        <p
          className="bx--progress-label"
        >
          Step 2
        </p>
        <p
          className="bx--progress-optional"
        >
          Create definition
        </p>
        <span
          className="bx--progress-line"
        />
      </button>
    </li>
    <li
      className="bx--progress-step bx--progress-step--incomplete"
    >
      <button
        className="bx--progress-step-button bx--progress-step-button--unclickable"
        onKeyDown={[Function]}
        tabIndex={-1}
      >
        <span
          className="bx--assistive-text"
        >
          Incomplete
        </span>
        <svg
          aria-hidden={true}
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
          />
          <title>
            
          </title>
        </svg>
        <p
          className="bx--progress-label"
        >
          Step 3
        </p>
        <p
          className="bx--progress-optional"
        >
          Deploy
        </p>
        <span
          className="bx--progress-line"
        />
      </button>
    </li>
  </ul>
</div>
`;

exports[`DeployProgressBar component should render the expected snapshot when showing v2 deploy view 1`] = `
<div
  className="bx--col-lg-10"
>
  <ul
    className="bx--progress"
  >
    <li
      className="bx--progress-step bx--progress-step--current"
    >
      <button
        className="bx--progress-step-button bx--progress-step-button--unclickable"
        onKeyDown={[Function]}
        tabIndex={-1}
      >
        <span
          className="bx--assistive-text"
        >
          Current
        </span>
        <svg
          aria-hidden={true}
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="16"
            cy="16"
            r="10"
          />
          <path
            d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
          />
          <title>
            
          </title>
        </svg>
        <p
          className="bx--progress-label"
        >
          Step 1
        </p>
        <p
          className="bx--progress-optional"
        >
          Choose smart contract
        </p>
        <span
          className="bx--progress-line"
        />
      </button>
    </li>
    <li
      className="bx--progress-step bx--progress-step--incomplete"
    >
      <button
        className="bx--progress-step-button bx--progress-step-button--unclickable"
        onKeyDown={[Function]}
        tabIndex={-1}
      >
        <span
          className="bx--assistive-text"
        >
          Incomplete
        </span>
        <svg
          aria-hidden={true}
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
          />
          <title>
            
          </title>
        </svg>
        <p
          className="bx--progress-label"
        >
          Step 2
        </p>
        <p
          className="bx--progress-optional"
        >
          Configure smart contract deployment
        </p>
        <span
          className="bx--progress-line"
        />
      </button>
    </li>
    <li
      className="bx--progress-step bx--progress-step--incomplete"
    >
      <button
        className="bx--progress-step-button bx--progress-step-button--unclickable"
        onKeyDown={[Function]}
        tabIndex={-1}
      >
        <span
          className="bx--assistive-text"
        >
          Incomplete
        </span>
        <svg
          aria-hidden={true}
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
          />
          <title>
            
          </title>
        </svg>
        <p
          className="bx--progress-label"
        >
          Step 3
        </p>
        <p
          className="bx--progress-optional"
        >
          Deploy
        </p>
        <span
          className="bx--progress-line"
        />
      </button>
    </li>
  </ul>
</div>
`;
